ajustes na escrita do sobre mim

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <div class="home-img">
     </div>
     <div class="home-text">
-      <span>Olá, Eu sou</span>
+      <span>Olá, me chamo</span>
       <h1>Salomão Bruno</h1>
-      <h2>Desenvolvedor Front-end</h2>
+      <h2>e eu sou Desenvolvedor Front-end</h2>
       <br>
       <a target="_blank" href="https://drive.google.com/u/0/uc?id=11rkZKC4-Vhmh1T_VUJI1bbekQu7GFGcd&export=download"
         class="
@@ -59,9 +59,9 @@
         <img src="img/perfil.png" alt="Foto perfil">
       </div>
       <div class="about-text">
-        <p>Eu sou um Desenvolvedor apaixonado pelo mundo Front-end, tenho como objetivo usufruir de todo poder e
-          liberdade que a programação pode proporcionar, aprendendo cada vez mais diariamente. No momento se
-          aventurando mais no Front-end, mas futuramente buscarei o Full-Stack.</p>
+        <p>Sou alguém curioso e apaixonado pelo mundo da programação, quero usufruir de todo poder e
+          liberdade que ela pode proporcionar, aprendendo cada vez mais diariamente. No momento estou me aventurando
+          mais com Front-end na Web, porém quero ir mais além no futuro.</p>
         <div class="information">
           <div class="info-box">
             <i class='bx bxs-user'></i>
