alteração no sobre mim

--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
         <img src="img/perfil.png" alt="Foto perfil">
       </div>
       <div class="about-text">
-        <p>Sou alguém curioso e apaixonado pelo mundo da programação, quero usufruir de todo poder e
-          liberdade que ela pode proporcionar, aprendendo cada vez mais diariamente. No momento estou me aventurando
-          mais com Front-end na Web, porém quero ir mais além no futuro.</p>
+        <p>Sou alguém curioso e apaixonado pelo mundo da programação, e quero usufruir de todo poder e
+          liberdade que ela pode proporcionar. Estou em constante evolução diariamente, e no momento estou me
+          aventurando
+          mais com Front-end na Web utilizando HTML, CSS e JavaScript, mas quero ir bem mais além no futuro.</p>
         <div class="information">
           <div class="info-box">
             <i class='bx bxs-user'></i>
