adicionado novo curriculo e projeto de landing page

--- a/projects.html
+++ b/projects.html
@@ -60,6 +60,30 @@
           <a href="https://brunaoks.github.io/login-screen/" target="_blank">Acessar projeto</a>
         </div>
       </div>
+      <!--------------------------------- card 03 ----------------------------------->
+      <div class='cards--wrapper'>
+        <div class="card--wrapp__img">
+          <a href="https://brunaoks.github.io/landing-page/" target="_blank">
+            <img src="img/landing-page.jpg" alt="Landind page">
+          </a>
+        </div>
+        <div class='card--wrapp__text'>
+          <div class="card--wrapp__title">
+            <h3>Landing page</h3>
+          </div>
+          <div class="card--wrapp__description">
+            <p>Projeto de landing page para barbearia.</p>
+          </div>
+        </div>
+        <div class="card--wrapp__skills">
+          <p>#HTML5</p>
+          <p>#CSS3</p>
+        </div>
+        <div class='card--wrapp__web'>
+          <a href="https://brunaoks.github.io/landing-page/" target="_blank">Acessar projeto</a>
+        </div>
+      </div>
+
     </div>
   </section>
 </body>
