projeto de landing page atualizado

--- a/projects.html
+++ b/projects.html
@@ -64,8 +64,8 @@
       <!--------------------------------- card 03 ----------------------------------->
       <div class='cards--wrapper'>
         <div class="card--wrapp__img">
-          <a href="https://brunaoks.github.io/landing-page/" target="_blank">
-            <img src="img/landing-page.jpg" alt="Landind page">
+          <a href="https://brunaoks.github.io/landing-page-classic/" target="_blank">
+            <img src="img/landing-page-barber.png" alt="Landind page">
           </a>
         </div>
         <div class='card--wrapp__text'>
@@ -81,7 +81,7 @@
           <p>#CSS3</p>
         </div>
         <div class='card--wrapp__web'>
-          <a href="https://brunaoks.github.io/landing-page/" target="_blank">Acessar projeto</a>
+          <a href="https://brunaoks.github.io/landing-page-classic/" target="_blank">Acessar projeto</a>
         </div>
       </div>
 
