retirado o link para instagram

--- a/index.html
+++ b/index.html
@@ -171,10 +171,9 @@
   </section>
   <!-- Contact Section End -->
   <div class="footer">
-    <h2>Redes sociais</h2>
+    <h2>Contatos</h2>
     <div class="footer-social">
       <a target="_blank" href="https://wa.me/5581981946222"><i class='bx bxl-whatsapp'></i></a>
-      <a target="_blank" href="https://www.instagram.com/bruno_florenc0/"><i class='bx bxl-instagram'></i></a>
       <a target="_blank" href="mailto:sfbruno2002@gmail.com"><i class='bx bxl-gmail'></i></a>
     </div>
 
