ajustado sessão home

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <input type="text" name="name" placeholder="Seu Nome" required>
         <input type="email" name="email" placeholder="Seu Email" required>
         <textarea name="message" cols="30" rows="10" placeholder="Escreva uma mensagem aqui..." required></textarea>
-        <input type="submit" value="Send" class="contact-button">
+        <input type="submit" value="Enviar" class="contact-button">
       </form>
     </div>
   </section>
