adicionado novos projetos e skills

--- a/projects.html
+++ b/projects.html
@@ -85,6 +85,56 @@
         </div>
       </div>
 
+      <!--------------------------------- card 04 ----------------------------------->
+
+      <div class='cards--wrapper'>
+        <div class="card--wrapp__img">
+          <a href="https://profile-salomao.netlify.app/" target="_blank">
+            <img src="img/profile-card.png" alt="Profile card">
+          </a>
+        </div>
+        <div class='card--wrapp__text'>
+          <div class="card--wrapp__title">
+            <h3>Profile card</h3>
+          </div>
+          <div class="card--wrapp__description">
+            <p>Projeto do meu profile card pessoal.</p>
+          </div>
+        </div>
+        <div class="card--wrapp__skills">
+          <p>#React</p>
+        </div>
+        <div class='card--wrapp__web'>
+          <a href="https://profile-salomao.netlify.app/" target="_blank">Acessar projeto</a>
+        </div>
+      </div>
+
+      <!--------------------------------- card 05 ----------------------------------->
+
+      <div class='cards--wrapper'>
+        <div class="card--wrapp__img">
+          <a href="https://brunaoks.github.io/info-queimada/" target="_blank">
+            <img src="img/infoqueimada.png" alt="InfoQueimada">
+          </a>
+        </div>
+        <div class='card--wrapp__text'>
+          <div class="card--wrapp__title">
+            <h3>InfoQueimada</h3>
+          </div>
+          <div class="card--wrapp__description">
+            <p>Projeto de website sobre desmatamento.</p>
+          </div>
+        </div>
+        <div class="card--wrapp__skills">
+          <p>#HTML5</p>
+          <p>#CSS3</p>
+          <p>#JavaScript</p>
+        </div>
+        <div class='card--wrapp__web'>
+          <a href="https://brunaoks.github.io/info-queimada/" target="_blank">Acessar projeto</a>
+        </div>
+      </div>
+
     </div>
   </section>
 </body>
