--- a/index.html
+++ b/index.html
@@ -114,9 +114,23 @@
 
         <div class="bars-box">
           <h3>JavaScript</h3>
-          <span>20%</span>
+          <span>35%</span>
           <div class="light-bar"></div>
           <div class="percent-bar js-bar"></div>
+        </div>
+
+        <div class="bars-box">
+          <h3>Git</h3>
+          <span>25%</span>
+          <div class="light-bar"></div>
+          <div class="percent-bar git-bar"></div>
+        </div>
+
+        <div class="bars-box">
+          <h3>React</h3>
+          <span>15%</span>
+          <div class="light-bar"></div>
+          <div class="percent-bar react-bar"></div>
         </div>
 
       </div>
