adicionado biblioteca reveal

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Portfólio - Salomão Bruno </title>
+  <script src="https://unpkg.com/scrollreveal"></script>
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
@@ -196,6 +197,8 @@
   </div>
   <!-- Javascript -->
   <script src="assets/scripts/main.js"></script>
+  
+
 </body>
 
 </html>
