--- a/projects.html
+++ b/projects.html
@@ -1,142 +1,155 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Projetos | Salomão Bruno</title>
+    <link rel="stylesheet" href="assets/css/projects.css" />
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projetos | Salomão Bruno</title>
-  <link rel="stylesheet" href="assets/css/projects.css">
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-</head>
-
-<body>
-  <section class='projects--section' id='projects'>
-    <h2 id="title--projects">Projetos</h2>
-    <div class='content--projects' style='margin-bottom: 60px;'>
-      <!--------------------------------- card 01 ----------------------------------->
-      <div class="cards--wrapper">
-
-        <div class="card--wrapp__img">
-          <a href="https://brunaoks.github.io/form/" target="_blank">
-            <img src="img/projeto-form.jpg" alt="Formulário">
-          </a>
-        </div>
-        <div class='card--wrapp__text'>
-          <div class="card--wrapp__title">
-            <h3>Formulário</h3>
+  <body>
+    <section class="projects--section" id="projects">
+      <h2 id="title--projects">Projetos</h2>
+      <div class="content--projects" style="margin-bottom: 60px">
+        <!--------------------------------- card 01 ----------------------------------->
+        <div class="cards--wrapper">
+          <div class="card--wrapp__img">
+            <a href="https://brunaoks.github.io/form/" target="_blank">
+              <img src="img/projeto-form.jpg" alt="Formulário" />
+            </a>
           </div>
-          <div class="card--wrapp__description">
-            <p>Projeto de formulário responsiva.</p>
+          <div class="card--wrapp__text">
+            <div class="card--wrapp__title">
+              <h3>Formulário</h3>
+            </div>
+            <div class="card--wrapp__description">
+              <p>Projeto de formulário responsiva.</p>
+            </div>
+          </div>
+          <div class="card--wrapp__skills">
+            <p>#HTML5</p>
+            <p>#CSS3</p>
+          </div>
+          <div class="card--wrapp__web">
+            <a href="https://brunaoks.github.io/form/" target="_blank"
+              >Acessar projeto</a
+            >
           </div>
         </div>
-        <div class="card--wrapp__skills">
-          <p>#HTML5</p>
-          <p>#CSS3</p>
+        <!--------------------------------- card 02 ----------------------------------->
+        <div class="cards--wrapper">
+          <div class="card--wrapp__img">
+            <a href="https://brunaoks.github.io/login-screen/" target="_blank">
+              <img src="img/login-screen.jpg" alt="Tela de login" />
+            </a>
+          </div>
+          <div class="card--wrapp__text">
+            <div class="card--wrapp__title">
+              <h3>Tela de login</h3>
+            </div>
+            <div class="card--wrapp__description">
+              <p>Projeto de tela de login responsiva.</p>
+            </div>
+          </div>
+          <div class="card--wrapp__skills">
+            <p>#HTML5</p>
+            <p>#CSS3</p>
+          </div>
+          <div class="card--wrapp__web">
+            <a href="https://brunaoks.github.io/login-screen/" target="_blank"
+              >Acessar projeto</a
+            >
+          </div>
         </div>
-        <div class='card--wrapp__web'>
-          <a href="https://brunaoks.github.io/form/" target="_blank">Acessar projeto</a>
+        <!--------------------------------- card 03 ----------------------------------->
+        <div class="cards--wrapper">
+          <div class="card--wrapp__img">
+            <a
+              href="https://brunaoks.github.io/landing-page-classic/"
+              target="_blank"
+            >
+              <img src="img/landing-page-barber.png" alt="Landind page" />
+            </a>
+          </div>
+          <div class="card--wrapp__text">
+            <div class="card--wrapp__title">
+              <h3>Landing page</h3>
+            </div>
+            <div class="card--wrapp__description">
+              <p>Projeto de landing page para barbearia.</p>
+            </div>
+          </div>
+          <div class="card--wrapp__skills">
+            <p>#HTML5</p>
+            <p>#CSS3</p>
+          </div>
+          <div class="card--wrapp__web">
+            <a
+              href="https://brunaoks.github.io/landing-page-classic/"
+              target="_blank"
+              >Acessar projeto</a
+            >
+          </div>
+        </div>
+
+        <!--------------------------------- card 04 ----------------------------------->
+
+        <div class="cards--wrapper">
+          <div class="card--wrapp__img">
+            <a href="https://profile-salomao.netlify.app/" target="_blank">
+              <img src="img/profile-card.png" alt="Profile card" />
+            </a>
+          </div>
+          <div class="card--wrapp__text">
+            <div class="card--wrapp__title">
+              <h3>Profile card</h3>
+            </div>
+            <div class="card--wrapp__description">
+              <p>Projeto do meu profile card pessoal.</p>
+            </div>
+          </div>
+          <div class="card--wrapp__skills">
+            <p>#React</p>
+          </div>
+          <div class="card--wrapp__web">
+            <a href="https://profile-salomao.netlify.app/" target="_blank"
+              >Acessar projeto</a
+            >
+          </div>
+        </div>
+
+        <!--------------------------------- card 05 ----------------------------------->
+
+        <div class="cards--wrapper">
+          <div class="card--wrapp__img">
+            <a href="https://brunaoks.github.io/info-queimada/" target="_blank">
+              <img src="img/infoqueimada.png" alt="InfoQueimada" />
+            </a>
+          </div>
+          <div class="card--wrapp__text">
+            <div class="card--wrapp__title">
+              <h3>InfoQueimada</h3>
+            </div>
+            <div class="card--wrapp__description">
+              <p>Projeto de website sobre desmatamento.</p>
+            </div>
+          </div>
+          <div class="card--wrapp__skills">
+            <p>#HTML5</p>
+            <p>#CSS3</p>
+            <p>#JavaScript</p>
+          </div>
+          <div class="card--wrapp__web">
+            <a href="https://brunaoks.github.io/info-queimada/" target="_blank"
+              >Acessar projeto</a
+            >
+          </div>
         </div>
       </div>
-      <!--------------------------------- card 02 ----------------------------------->
-      <div class='cards--wrapper'>
-        <div class="card--wrapp__img">
-          <a href="https://brunaoks.github.io/login-screen/" target="_blank">
-            <img src="img/login-screen.jpg" alt="Tela de login">
-          </a>
-        </div>
-        <div class='card--wrapp__text'>
-          <div class="card--wrapp__title">
-            <h3>Tela de login</h3>
-          </div>
-          <div class="card--wrapp__description">
-            <p>Projeto de tela de login responsiva.</p>
-          </div>
-        </div>
-        <div class="card--wrapp__skills">
-          <p>#HTML5</p>
-          <p>#CSS3</p>
-        </div>
-        <div class='card--wrapp__web'>
-          <a href="https://brunaoks.github.io/login-screen/" target="_blank">Acessar projeto</a>
-        </div>
-      </div>
-      <!--------------------------------- card 03 ----------------------------------->
-      <div class='cards--wrapper'>
-        <div class="card--wrapp__img">
-          <a href="https://brunaoks.github.io/landing-page-classic/" target="_blank">
-            <img src="img/landing-page-barber.png" alt="Landind page">
-          </a>
-        </div>
-        <div class='card--wrapp__text'>
-          <div class="card--wrapp__title">
-            <h3>Landing page</h3>
-          </div>
-          <div class="card--wrapp__description">
-            <p>Projeto de landing page para barbearia.</p>
-          </div>
-        </div>
-        <div class="card--wrapp__skills">
-          <p>#HTML5</p>
-          <p>#CSS3</p>
-        </div>
-        <div class='card--wrapp__web'>
-          <a href="https://brunaoks.github.io/landing-page-classic/" target="_blank">Acessar projeto</a>
-        </div>
-      </div>
-
-      <!--------------------------------- card 04 ----------------------------------->
-
-      <div class='cards--wrapper'>
-        <div class="card--wrapp__img">
-          <a href="https://profile-salomao.netlify.app/" target="_blank">
-            <img src="img/profile-card.png" alt="Profile card">
-          </a>
-        </div>
-        <div class='card--wrapp__text'>
-          <div class="card--wrapp__title">
-            <h3>Profile card</h3>
-          </div>
-          <div class="card--wrapp__description">
-            <p>Projeto do meu profile card pessoal.</p>
-          </div>
-        </div>
-        <div class="card--wrapp__skills">
-          <p>#React</p>
-        </div>
-        <div class='card--wrapp__web'>
-          <a href="https://profile-salomao.netlify.app/" target="_blank">Acessar projeto</a>
-        </div>
-      </div>
-
-      <!--------------------------------- card 05 ----------------------------------->
-
-      <div class='cards--wrapper'>
-        <div class="card--wrapp__img">
-          <a href="https://brunaoks.github.io/info-queimada/" target="_blank">
-            <img src="img/infoqueimada.png" alt="InfoQueimada">
-          </a>
-        </div>
-        <div class='card--wrapp__text'>
-          <div class="card--wrapp__title">
-            <h3>InfoQueimada</h3>
-          </div>
-          <div class="card--wrapp__description">
-            <p>Projeto de website sobre desmatamento.</p>
-          </div>
-        </div>
-        <div class="card--wrapp__skills">
-          <p>#HTML5</p>
-          <p>#CSS3</p>
-          <p>#JavaScript</p>
-        </div>
-        <div class='card--wrapp__web'>
-          <a href="https://brunaoks.github.io/info-queimada/" target="_blank">Acessar projeto</a>
-        </div>
-      </div>
-
-    </div>
-  </section>
-</body>
-
+    </section>
+    <script src="assets/scripts/main.js"></script>
+  </body>
 </html>
