--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <section class="home" id="home">
     <div class="social">
       <a target="_blank" href="https://github.com/brunaoks"><i class='bx bxl-github'></i></a>
-      <a target="_blank" href="https://www.linkedin.com/in/salomao-bruno"><i class='bx bxl-linkedin'></i></a>
+      <a target="_blank" href="https://www.linkedin.com/in/salomao-florenco"><i class='bx bxl-linkedin'></i></a>
     </div>
     <div class="home-img">
     </div>
@@ -42,7 +42,7 @@
       <h1>Salomão Bruno</h1>
       <h2>e eu sou Desenvolvedor Front-end</h2>
       <br>
-      <a target="_blank" href="https://drive.google.com/u/0/uc?id=1O3_b2fnoWIAEP_pagRf7EZq3nBDe5mZP&export=download"
+      <a target="_blank" href="https://drive.google.com/u/0/uc?id=1T6-DZcskmNceYeSeoi8Uiq6j613W0U16&export=download"
         class="
         btn">Download CV</a>
     </div>
